Fixing form spacing.

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -95,7 +95,7 @@
   }
 
   form.form {
-    @apply space-y;
+    @apply space-y-5;
     .buttons {
       @apply pt-3;
     }
